k8s/mtgengine-k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtgengine-k8s
spec:
  selector:
    app: mtgengine-k8s
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
  type: ClusterIP
