k8s/mtgengine-k8s/templates/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: mtgengine-k8s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
